# ADVANCED-DATA-STRUCTURE

./: README.md  link opencv clion windows .txt  link opengl freeglut clion windows.txt
FINAL PRACTICAL EXAM/Concurrent_Priority_Queue_V1/: CMakeLists.txt  C_priority_queue.h  C_vector.h  concurrent_priority_queue.h  main.cpp  time_16_threads_v1.txt  time_4_threads_v1.txt  time_8_threads_v1.txt  time_threads.txt  time_threads1.txt
FINAL PRACTICAL EXAM/Concurrent_Priority_Queue_V2/: CMakeLists.txt  Concurrent_PriorityQueue  Lock_Free_SkipList.h  main.cpp  time_16_threads.txt  time_8_threads.txt  time_threads4.txt
FINAL PRACTICAL EXAM/plot and table/: main.py  sequential.txt  table.py  time_4_threads.txt
PARCIAL PRACTICO/Priority_Queue/: CMakeLists.txt  C_priority_queue.h  C_vector.h  main.cpp  tests.h  time.txt  time1.txt
PARCIAL PRACTICO/Priority_Queue_V2/: CMakeLists.txt  C_priority_queue.h  C_vector.h  main.cpp  test.h  time1.txt
PARCIAL PRACTICO/algorithm/: CMakeLists.txt  main.cpp
PARCIAL PRACTICO/plot/: main.py  prueba.txt  time1.txt
UNIDAD 1/Lab 1 codes/ADVANCED-DATE-STRUCTURE/: 3.1.1.cpp  3.1.2.cpp  3.2.cpp  3.3.cpp
UNIDAD 1/lab 2 codes/: 3.4.cpp  3.5.cpp  3.6(figure 20)).cpp  3.6(figure 21, 22, 23).cpp
UNIDAD 1/lab 2 codes/3.7/: 3.7.cpp  (+1 more)
UNIDAD 1/lab 3 codes/: data.txt  main.cpp
UNIDAD 1/lab 4 codes/: main.cpp
UNIDAD 2/Lab 11/HilbertCurve_Quadtree2D/: CMakeLists.txt  HOrder.h  Point.h  main.cpp  quadtree.h
UNIDAD 2/Lab 11/ZOrderCurve_Quadtree2D/: CMakeLists.txt  Point.h  ZOrder.h  main.cpp  quadtree.h
UNIDAD 2/Lab 15/: modification box.cpp
(+43 files in other folders)
